--- a/app/src/main/res/layout/activity_credit_card_payment.xml
+++ b/app/src/main/res/layout/activity_credit_card_payment.xml
@@ -141,7 +141,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/Visa_Inc_logo"
+                    android:background="@drawable/visainclogo"
                     android:layout_marginRight="16dp"
                     android:scaleType="fitXY"/>
 
@@ -204,7 +204,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="3dp"
                     android:layout_marginRight="16dp"
-                    android:background="@drawable/Mastercard_Logo"
+                    android:background="@drawable/mastercardlogo"
                     android:scaleType="fitXY"/>
 
             </LinearLayout>
