--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="secondary">#d890ff</color>
     <color name="secondary_secondary">#f0c0ff</color>
     <color name="white_smoke">#F5F5F5</color>
-    <color name="Grey">#D8D8D8</color>
+    <color name="Grey">#ADADAD</color>
+    <color name="DarkGrey">#585858</color>
     <color name="Red">#E94852</color>
 </resources>
