fix notif fitur login

--- a/app/src/main/res/layout/item_view_list_bus.xml
+++ b/app/src/main/res/layout/item_view_list_bus.xml
@@ -82,12 +82,13 @@
             tools:text="Big bus" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnBookingBus"
+            android:id="@+id/btnDetail"
             android:layout_width="wrap_content"
             android:layout_height="24dp"
             android:background="@drawable/btn_custom"
             android:padding="4dp"
-            android:text="Book Now"
+            android:text="Detail"
+            android:textColor="@color/white"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
